# MNISTModel

./: .dockerignore  Dockerfile  api.py  dataset.py  earlystopping.py  main.py  model.py  pyproject.toml  test_model.py  train_model.py  visualize.py
