[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
ml = { workspace = true }

[dependency-groups]
dev = [
    "ml",
    "ruff>=0.13.1",
]

[tool.ruff]
select = ["E", "F", "W", "I", "UP"]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["my_awesome_project"]
